compiler/acton/test/syntaxerrors/err4.act
def f(x):
    return x+pass
